--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
   </head>
   <body>
     <div class="container">
-            <div class="title">
+        <div class="title">
             <h1><img src="images/notes.png" alt="">To-Do-List</h1>
         </div>
         <div class="all-tasks">
             <h2>my lists</h2>
-            <ul class="task-list" data-lists>
-            </ul>
+            <!--data-list -->
+            <ul class="task-list" data-lists></ul>
+            <!--data-new-list-form -->
             <form action="" data-new-list-form>
+                <!--data-new-list-input -->
                 <input 
                     type="text"
                     class="new list"
@@ -29,6 +31,7 @@
         </div>
 
         <div class="delete-stuff">
+            <!--data-delete-list-button -->
             <button class="btn delete" data-delete-list-button>Delete List<img src="images/delete.png" alt=""></button>
             <p>* select a list you want to delete</p>
         </div>
